# lima-squad

./: Cargo.toml  README.md  build.rs
migrations/: 20231224192034_create_todos_table.sql
src/: database.rs  lib.rs  main.rs
src/widgets/: mod.rs  popup.rs
